replaced reflection createInstance cause of deprecated with java 9 onwards